k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: victoria
  labels:
    app.kubernetes.io/name: victoria
    app.kubernetes.io/part-of: albrightlab
