k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: victoria
  namespace: victoria
  labels:
    app: victoria
spec:
  type: ClusterIP
  selector:
    app: victoria
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
